Fix post title overflow in reader post card

--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -417,6 +417,7 @@
 
 .reader-post-card__title {
 	line-height: 1.4;
+	overflow-wrap: break-word;
 }
 
 // Needs to overwrite .reader__content a
